--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
+    "cryptocompare": "^1.0.0",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.546.0",
     "next": "15.5.5",
     "react": "19.1.0",
