--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.7.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "cross-env": "^10.0.0",
     "crypto": "^1.0.1",
@@ -49,6 +50,7 @@
     "zod": "^3.25.67"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.10",
     "@types/node": "^24.8.1",
     "@types/nodemailer": "^6.4.20"
   }
